--- a/simplic-datastack/Simplic.DataStack/Simplic.DataStack.csproj
+++ b/simplic-datastack/Simplic.DataStack/Simplic.DataStack.csproj
@@ -44,7 +44,10 @@
     <Compile Include="Interface\IStackReportService.cs" />
     <Compile Include="Interface\IStackService.cs" />
     <Compile Include="Interface\IStackTimestampService.cs" />
+    <Compile Include="Model\Scripting\BeforeReportPythonParameter.cs" />
     <Compile Include="Model\InstanceDataTimeStamp.cs" />
+    <Compile Include="Model\Scripting\PostReportPythonParameter.cs" />
+    <Compile Include="Model\Scripting\ReportPythonParameter.cs" />
     <Compile Include="Model\StackReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
