--- a/simplic-user/Simplic.User/Simplic.User.nuspec
+++ b/simplic-user/Simplic.User/Simplic.User.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/simplic/simplic-service</projectUrl>
     <iconUrl><![CDATA[https://avatars0.githubusercontent.com/u/17578084?s=200&v=4]]></iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Core package.</description>
+    <description>Core package for the user service.</description>
     <copyright>Copyright Simplic GmbH 2018</copyright>
   </metadata>
 </package>
