--- a/simplic-corelib/Simplic.CoreLib/Simplic.CoreLib.csproj
+++ b/simplic-corelib/Simplic.CoreLib/Simplic.CoreLib.csproj
@@ -108,7 +108,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="package.bat" />
-    <None Include="Simplic.CoreLib.nuspec" />
+    <None Include="Simplic.CoreLib.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
