--- a/simplic-datastack/Simplic.DataStack/Simplic.DataStack.csproj
+++ b/simplic-datastack/Simplic.DataStack/Simplic.DataStack.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,11 +53,14 @@
     <Compile Include="Model\Scripting\PostReportPythonParameter.cs" />
     <Compile Include="Model\Scripting\ReportPythonParameter.cs" />
     <Compile Include="Model\StackReport.cs" />
+    <Compile Include="Model\StackReportFlowEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Model\ReportFlowEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\StackReportExecutionResult.cs" />
     <None Include="package.bat" />
+    <None Include="packages.config" />
     <None Include="Simplic.DataStack.nuspec" />
   </ItemGroup>
   <ItemGroup>
