--- a/simplic-interval/Simplic.Interval.Service/packages.config
+++ b/simplic-interval/Simplic.Interval.Service/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Simplic.CoreLib" version="6.14.18.814" targetFramework="net461" />
+  <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
   <package id="Simplic.Sql" version="6.1.18.625" targetFramework="net461" />
 </packages>
