--- a/simplic-interval/Simplic.Interval/Simplic.Interval.csproj
+++ b/simplic-interval/Simplic.Interval/Simplic.Interval.csproj
@@ -34,6 +34,9 @@
     <Reference Include="Simplic.CoreLib, Version=6.14.18.814, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Simplic.CoreLib.6.14.18.814\lib\net451\Simplic.CoreLib.dll</HintPath>
     </Reference>
+    <Reference Include="Simplic.Data, Version=1.5.118.1029, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Data.1.5.118.1029\lib\net451\Simplic.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enum\IntervalType.cs" />
+    <Compile Include="Interface\IIntervalRepository.cs" />
     <Compile Include="Interface\IIntervalService.cs" />
     <Compile Include="Model\Interval.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
