--- a/simplic-interval/Simplic.Interval/packages.config
+++ b/simplic-interval/Simplic.Interval/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Simplic.CoreLib" version="6.14.18.814" targetFramework="net461" />
+  <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
 </packages>
