--- a/simplic-interval/Simplic.Interval.Data.DB/Simplic.Interval.Data.DB.csproj
+++ b/simplic-interval/Simplic.Interval.Data.DB/Simplic.Interval.Data.DB.csproj
@@ -68,7 +68,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
+    <None Include="Simplic.Interval.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
