--- a/simplic-session/Simplic.Session/Simplic.Session.csproj
+++ b/simplic-session/Simplic.Session/Simplic.Session.csproj
@@ -50,8 +50,8 @@
     <None Include="Simplic.Session.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Simplic.Tenant">
-      <Version>1.1.19.1011</Version>
+    <PackageReference Include="Simplic.TenantSystem">
+      <Version>1.2.19.127</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
