--- a/simplic-interval/Simplic.Interval.Service/packages.config
+++ b/simplic-interval/Simplic.Interval.Service/packages.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="1.50.5" targetFramework="net461" />
-  <package id="Simplic.CoreLib" version="6.14.18.814" targetFramework="net461" />
-  <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
-  <package id="Simplic.Sql" version="6.1.18.625" targetFramework="net461" />
+  <package id="Dapper" version="2.0.30" targetFramework="net48" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net48" />
+  <package id="EntityFramework.de" version="6.1.3" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="Simplic.CoreLib" version="6.17.20.322" targetFramework="net48" />
+  <package id="Simplic.Data" version="1.6.20.322" targetFramework="net48" />
+  <package id="Simplic.Framework.DAL" version="7.2.20.321" targetFramework="net48" />
+  <package id="Simplic.Sql" version="6.2.18.926" targetFramework="net48" />
+  <package id="Telerik.Windows.Controls.Data.for.Wpf.Xaml" version="2020.1.218" targetFramework="net48" />
+  <package id="Telerik.Windows.Controls.for.Wpf.Xaml" version="2020.1.218" targetFramework="net48" />
+  <package id="Telerik.Windows.Controls.Input.for.Wpf.Xaml" version="2020.1.218" targetFramework="net48" />
+  <package id="Telerik.Windows.Data.for.Wpf.Xaml" version="2020.1.218" targetFramework="net48" />
 </packages>
